--- a/android/Dartify/app/build.gradle
+++ b/android/Dartify/app/build.gradle
@@ -6,7 +6,7 @@ android {
         applicationId "com.mentit.dartify"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 22
+        versionCode 24
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
@@ -72,9 +72,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.14.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'joda-time:joda-time:2.10.5'
-    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-messaging:20.3.0'
+    implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
