--- a/android/Dartify/app/src/main/AndroidManifest.xml
+++ b/android/Dartify/app/src/main/AndroidManifest.xml
@@ -66,7 +66,9 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.mentit.dartify.HelperClasses.MyFirebaseMessagingService">
+        <service
+            android:name="com.mentit.dartify.HelperClasses.MyFirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
