--- a/android/Dartify/app/build.gradle
+++ b/android/Dartify/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     defaultConfig {
         applicationId "com.mentit.dartify"
         minSdkVersion 22
@@ -63,20 +63,18 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
-    implementation "com.android.support:support-emoji-bundled:28.0.0"
-    implementation "com.android.support:support-emoji:28.0.0"
+    implementation 'androidx.emoji:emoji-bundled:1.1.0'
+    implementation 'androidx.emoji:emoji:1.1.0'
     implementation 'org.apache.commons:commons-text:1.9'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.squareup.okhttp3:okhttp:3.14.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'joda-time:joda-time:2.10.5'
-    implementation platform('com.google.firebase:firebase-bom:28.2.1')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -95,18 +93,18 @@ dependencies {
     implementation 'io.apptik.widget:multislider:1.3'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //CardStackView
     def cardstackview_version = "2.3.4"
     implementation "com.yuyakaido.android:card-stack-view:$cardstackview_version"
 
-    def lifecycle_version = "2.0.0"
+    def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    //annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    def room_version = "2.1.0"
+    def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
