--- a/android/Dartify/app/build.gradle
+++ b/android/Dartify/app/build.gradle
@@ -24,7 +24,7 @@ android {
             buildConfigField "String", "SOCKET_URL", '"http://dartifyapp.com:8080"'
             buildConfigField "String", "CERT_DOMAIN", '"-"'
             buildConfigField "String", "CERT_FINGERPRINT", '"-"'
-
+            buildConfigField "String", "BLOCK_INSTERSTITIAL_1", '"ca-app-pub-3940256099942544/1033173712"'
         }
         staging {
             buildConfigField "String", "BASE_URL", '"https://apiv1.dartifyapp.com/"'
@@ -32,6 +32,7 @@ android {
             buildConfigField "String", "SOCKET_URL", '"http://dartifyapp.com:8080"'
             buildConfigField "String", "CERT_DOMAIN", '"-"'
             buildConfigField "String", "CERT_FINGERPRINT", '"-"'
+            buildConfigField "String", "BLOCK_INSTERSTITIAL_1", '"ca-app-pub-3940256099942544/1033173712"'
         }
         release {
             buildConfigField "String", "BASE_URL", '"https://apiv1.dartifyapp.com/"'
@@ -39,6 +40,7 @@ android {
             buildConfigField "String", "SOCKET_URL", '"http://dartifyapp.com:8080"'
             buildConfigField "String", "CERT_DOMAIN", '"-"'
             buildConfigField "String", "CERT_FINGERPRINT", '"-"'
+            buildConfigField "String", "BLOCK_INSTERSTITIAL_1", '"ca-app-pub-3940256099942544/1033173712"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -69,8 +71,8 @@ dependencies {
     implementation 'androidx.emoji:emoji:1.1.0'
     implementation 'org.apache.commons:commons-text:1.9'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.6'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'joda-time:joda-time:2.10.5'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
@@ -111,6 +113,9 @@ dependencies {
 
     def billing_version = "4.0.0"
     implementation "com.android.billingclient:billing:$billing_version"
+
+    //ANUNCIOS
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
 
     //POR REMOVER
 
