--- a/android/Dartify/app/src/main/AndroidManifest.xml
+++ b/android/Dartify/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3484434512354428~7871839018"/>
         <activity
             android:name=".Activities.MainActivity"
             android:screenOrientation="portrait">
