--- a/android/Dartify/app/src/main/AndroidManifest.xml
+++ b/android/Dartify/app/src/main/AndroidManifest.xml
@@ -120,6 +120,9 @@
             android:name=".Activities.ConfigureProfileActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".Activities.TOSActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".Activities.ChatActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
