--- a/android/Dartify/app/build.gradle
+++ b/android/Dartify/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    namespace 'com.mentit.dartify'
     compileSdkVersion 31
     defaultConfig {
         applicationId "com.mentit.dartify"
@@ -106,7 +107,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     //annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    def room_version = "2.3.0"
+    def room_version = "2.4.3"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
