--- a/android/Dartify/app/src/main/AndroidManifest.xml
+++ b/android/Dartify/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".HelperClasses.MyApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +18,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".HelperClasses.MyApplication"
         tools:replace="android:allowBackup">
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -30,9 +30,11 @@
             android:value="@string/facebook_app_id" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3484434512354428~7871839018"/>
+            android:value="ca-app-pub-3484434512354428~7871839018" />
+
         <activity
             android:name=".Activities.MainActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,6 +42,7 @@
         </activity>
         <activity
             android:name=".Activities.FacebookLoginActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,10 +51,12 @@
         </activity>
         <activity
             android:name=".Activities.RegisterActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:exported="true"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
@@ -77,57 +82,73 @@
 
         <activity
             android:name=".Activities.PhotosetActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.GalleryActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.JustNowActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
             android:label="@string/title_activity_just_now"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.JustNowQuizActivity"
+            android:exported="false"
             android:label="@string/title_activity_just_now_quiz"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".Activities.ChemistryActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.PersonalityActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.HumorActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.HumorQuizActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.PersonalityQuizActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.BlockedUsersActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.StoreActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.ProfileActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.ConfigureProfileActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.TOSActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.ChatActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
 
         <service
             android:name=".Services.GetMessagesService"
-            android:enabled="true" />
+            android:enabled="true"
+            android:exported="false" />
     </application>
 </manifest>
