--- a/android/Dartify/build.gradle
+++ b/android/Dartify/build.gradle
@@ -4,11 +4,12 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        //noinspection JcenterRepositoryObsolete
+        jcenter()  //TODO: Replace with maven
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.14'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +18,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        //noinspection JcenterRepositoryObsolete
+        jcenter()  //TODO: Replace with maven
     }
 }
 
